# nfl-ml-model

./: README.md  data - Shortcut.lnk  pyproject.toml  requirements.txt  run.sh  src - Shortcut.lnk
data/: train.db
src/: utils.py
src/config/: config.py
src/data/: build.py
src/data/ancillary/: expectations.py
src/data/features/: Downloads.code-workspace  drive_stats.py  play_stats.py  pythag_exp.py  qb_stats.py  scaler.py
src/data/pfr/: raw.py  tables.py
src/data/predict/: predict.py
src/model/: estimators.py  evaluate.py  process.py  train.py
src/plot/: plot.py
